update body background color

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>NFT Marketplace</title>
   </head>
-  <body>
+  <body class="bg-dark-gun-metal">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
